# routes/index.js
@@ -8,5 +8,6 @@ router.get('/', (req, res) => {
 });
 
 router.use('/students', require('./students'));
+router.use('/teachers', require('./teachers'));
 
 module.exports = router;
